[package]
name = "redacted_debug"
version = "0.1.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2018"
description = "A small procedural macro to allow redacting sensitive information without losing the ease of use of deriving Debug"

license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.26"
synstructure = "0.10.1"
quote = "0.6.11"
proc-macro2 = "0.4.27"
