[package]
name = "redacted_debug"
version = "0.2.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2018"
description = "A small procedural macro to allow redacting sensitive information without losing the ease of use of deriving Debug"

license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
proc-macro2 = "1.0.49"
